--- a/MafiaServer/MafiaServer/appsettings.json
+++ b/MafiaServer/MafiaServer/appsettings.json
@@ -8,6 +8,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "MafiaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MafiaContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "MafiaContext1": "Server=(localdb)\\mssqllocaldb;Database=MafiaContext;Trusted_Connection=True"
     }
 }
